예외 처리 완료

--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -4,3 +4,9 @@
 flash.post.created=Post has been created successfully.
 flash.post.updated=Post has been updated successfully.
 flash.post.deleted=Post has been deleted successfully.
+
+# Error Messages
+error.post.notfound=The requested post could not be found.
+error.server.internal=A server error occurred. Please try again later.
+error.page.notfound=Page not found.
+error.access.denied=Access denied.
