--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -4,3 +4,9 @@
 flash.post.created=게시글이 성공적으로 작성되었습니다.
 flash.post.updated=게시글이 성공적으로 수정되었습니다.
 flash.post.deleted=게시글이 성공적으로 삭제되었습니다.
+
+# Error Messages
+error.post.notfound=요청하신 게시글을 찾을 수 없습니다.
+error.server.internal=서버 오류가 발생했습니다. 잠시 후 다시 시도해주세요.
+error.page.notfound=페이지를 찾을 수 없습니다.
+error.access.denied=접근 권한이 없습니다.
