회원가입 로그인 1차 완료

--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -5,8 +5,36 @@ flash.post.created=게시글이 성공적으로 작성되었습니다.
 flash.post.updated=게시글이 성공적으로 수정되었습니다.
 flash.post.deleted=게시글이 성공적으로 삭제되었습니다.
 
+# Authentication Success Messages
+flash.auth.signup.success=회원가입이 완료되었습니다. 로그인해주세요.
+flash.auth.login.success=님, 환영합니다!
+flash.auth.logout.success=성공적으로 로그아웃되었습니다.
+flash.auth.profile.updated=프로필이 성공적으로 업데이트되었습니다.
+
 # Error Messages
 error.post.notfound=요청하신 게시글을 찾을 수 없습니다.
 error.server.internal=서버 오류가 발생했습니다. 잠시 후 다시 시도해주세요.
 error.page.notfound=페이지를 찾을 수 없습니다.
 error.access.denied=접근 권한이 없습니다.
+
+# Authentication Error Messages
+error.auth.invalid.credentials=아이디 또는 비밀번호가 올바르지 않습니다.
+error.auth.username.duplicate=이미 사용 중인 아이디입니다.
+error.auth.email.duplicate=이미 사용 중인 이메일입니다.
+error.auth.displayname.duplicate=이미 사용 중인 닉네임입니다.
+error.auth.password.mismatch=비밀번호가 일치하지 않습니다.
+error.auth.password.current.invalid=현재 비밀번호가 올바르지 않습니다.
+error.auth.password.new.mismatch=새 비밀번호가 일치하지 않습니다.
+error.auth.user.notfound=사용자를 찾을 수 없습니다.
+
+# Validation Messages
+validation.username.required=아이디는 필수입니다.
+validation.username.size=아이디는 4자 이상 20자 이하여야 합니다.
+validation.username.pattern=아이디는 영문, 숫자, 언더스코어만 사용 가능합니다.
+validation.password.required=비밀번호는 필수입니다.
+validation.password.size=비밀번호는 8자 이상이어야 합니다.
+validation.password.confirm.required=비밀번호 확인은 필수입니다.
+validation.email.required=이메일은 필수입니다.
+validation.email.format=올바른 이메일 형식이 아닙니다.
+validation.displayname.required=닉네임은 필수입니다.
+validation.displayname.size=닉네임은 2자 이상 20자 이하여야 합니다.
