--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -5,8 +5,36 @@ flash.post.created=Post has been created successfully.
 flash.post.updated=Post has been updated successfully.
 flash.post.deleted=Post has been deleted successfully.
 
+# Authentication Success Messages
+flash.auth.signup.success=Registration completed successfully. Please log in.
+flash.auth.login.success=, welcome!
+flash.auth.logout.success=Successfully logged out.
+flash.auth.profile.updated=Profile has been updated successfully.
+
 # Error Messages
 error.post.notfound=The requested post could not be found.
 error.server.internal=A server error occurred. Please try again later.
 error.page.notfound=Page not found.
 error.access.denied=Access denied.
+
+# Authentication Error Messages
+error.auth.invalid.credentials=Invalid username or password.
+error.auth.username.duplicate=This username is already in use.
+error.auth.email.duplicate=This email is already in use.
+error.auth.displayname.duplicate=This display name is already in use.
+error.auth.password.mismatch=Passwords do not match.
+error.auth.password.current.invalid=Current password is incorrect.
+error.auth.password.new.mismatch=New passwords do not match.
+error.auth.user.notfound=User not found.
+
+# Validation Messages
+validation.username.required=Username is required.
+validation.username.size=Username must be between 4 and 20 characters.
+validation.username.pattern=Username can only contain letters, numbers, and underscores.
+validation.password.required=Password is required.
+validation.password.size=Password must be at least 8 characters.
+validation.password.confirm.required=Password confirmation is required.
+validation.email.required=Email is required.
+validation.email.format=Invalid email format.
+validation.displayname.required=Display name is required.
+validation.displayname.size=Display name must be between 2 and 20 characters.
