회원가입 1차 완료

--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -19,3 +19,16 @@ error.page.message.500=서비스 이용에 불편을 드려 죄송합니다. 잠
 error.actions.home=메인으로
 error.actions.posts=게시글 목록
 error.actions.back=이전 페이지
+
+# Signup Messages
+flash.user.created=회원가입이 완료되었습니다.
+error.email.duplicate=이미 사용 중인 이메일입니다.
+
+# Validation Messages
+validation.email.required=이메일은 필수입니다.
+validation.email.invalid=올바른 이메일 형식이 아닙니다.
+validation.password.required=비밀번호는 필수입니다.
+validation.password.size=비밀번호는 최소 4자 이상이어야 합니다.
+validation.password.confirm.required=비밀번호 확인은 필수입니다.
+validation.nickname.required=닉네임은 필수입니다.
+validation.nickname.size=닉네임은 2자 이상 20자 이하여야 합니다.
