--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -19,3 +19,16 @@ error.page.message.500=We apologize for the inconvenience. Please try again late
 error.actions.home=Home
 error.actions.posts=Posts
 error.actions.back=Back
+
+# Signup Messages
+flash.user.created=Sign up completed successfully.
+error.email.duplicate=Email is already in use.
+
+# Validation Messages
+validation.email.required=Email is required.
+validation.email.invalid=Invalid email format.
+validation.password.required=Password is required.
+validation.password.size=Password must be at least 4 characters.
+validation.password.confirm.required=Password confirmation is required.
+validation.nickname.required=Nickname is required.
+validation.nickname.size=Nickname must be between 2 and 20 characters.
