로그인 완료

--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -24,6 +24,11 @@ error.actions.back=이전 페이지
 flash.user.created=회원가입이 완료되었습니다.
 error.email.duplicate=이미 사용 중인 이메일입니다.
 
+# Login Messages
+flash.login.success=로그인되었습니다.
+flash.logout.success=로그아웃되었습니다.
+error.login.invalid=이메일 또는 비밀번호가 올바르지 않습니다.
+
 # Validation Messages
 validation.email.required=이메일은 필수입니다.
 validation.email.invalid=올바른 이메일 형식이 아닙니다.
