--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -24,6 +24,11 @@ error.actions.back=Back
 flash.user.created=Sign up completed successfully.
 error.email.duplicate=Email is already in use.
 
+# Login Messages
+flash.login.success=You have been logged in successfully.
+flash.logout.success=You have been logged out successfully.
+error.login.invalid=Invalid email or password.
+
 # Validation Messages
 validation.email.required=Email is required.
 validation.email.invalid=Invalid email format.
