--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -29,6 +29,10 @@ flash.login.success=You have been logged in successfully.
 flash.logout.success=You have been logged out successfully.
 error.login.invalid=Invalid email or password.
 
+# Profile Messages
+flash.profile.updated=Profile updated successfully.
+error.user.notfound=User not found.
+
 # Validation Messages
 validation.email.required=Email is required.
 validation.email.invalid=Invalid email format.
@@ -37,3 +41,4 @@ validation.password.size=Password must be at least 4 characters.
 validation.password.confirm.required=Password confirmation is required.
 validation.nickname.required=Nickname is required.
 validation.nickname.size=Nickname must be between 2 and 20 characters.
+validation.password.current.required=Current password is required.
