--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -29,6 +29,10 @@ flash.login.success=로그인되었습니다.
 flash.logout.success=로그아웃되었습니다.
 error.login.invalid=이메일 또는 비밀번호가 올바르지 않습니다.
 
+# Profile Messages
+flash.profile.updated=프로필이 수정되었습니다.
+error.user.notfound=사용자를 찾을 수 없습니다.
+
 # Validation Messages
 validation.email.required=이메일은 필수입니다.
 validation.email.invalid=올바른 이메일 형식이 아닙니다.
@@ -37,3 +41,4 @@ validation.password.size=비밀번호는 최소 4자 이상이어야 합니다.
 validation.password.confirm.required=비밀번호 확인은 필수입니다.
 validation.nickname.required=닉네임은 필수입니다.
 validation.nickname.size=닉네임은 2자 이상 20자 이하여야 합니다.
+validation.password.current.required=현재 비밀번호는 필수입니다.
