--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -32,6 +32,7 @@ error.login.invalid=Invalid email or password.
 # Profile Messages
 flash.profile.updated=Profile updated successfully.
 error.user.notfound=User not found.
+error.post.access.denied=You can only edit/delete your own posts.
 
 # Validation Messages
 validation.email.required=Email is required.
