--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -32,6 +32,7 @@ error.login.invalid=이메일 또는 비밀번호가 올바르지 않습니다.
 # Profile Messages
 flash.profile.updated=프로필이 수정되었습니다.
 error.user.notfound=사용자를 찾을 수 없습니다.
+error.post.access.denied=본인이 작성한 글만 수정/삭제할 수 있습니다.
 
 # Validation Messages
 validation.email.required=이메일은 필수입니다.
