--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -1,6 +1,8 @@
 # Flash Messages (Korean)
-
-# Success Messages
+flash.user.created=회원가입이 완료되었습니다.
+flash.login.success=로그인되었습니다.
+flash.logout.success=로그아웃되었습니다.
+flash.profile.updated=프로필이 수정되었습니다.
 flash.post.created=게시글이 성공적으로 작성되었습니다.
 flash.post.updated=게시글이 성공적으로 수정되었습니다.
 flash.post.deleted=게시글이 성공적으로 삭제되었습니다.
@@ -10,6 +12,17 @@ error.post.notfound=요청하신 게시글을 찾을 수 없습니다.
 error.server.internal=서버 오류가 발생했습니다. 잠시 후 다시 시도해주세요.
 error.page.notfound=페이지를 찾을 수 없습니다.
 error.access.denied=접근 권한이 없습니다.
+error.post.not.owner=본인이 작성한 글만 수정/삭제할 수 있습니다.
+error.user.not.found=사용자를 찾을 수 없습니다.
+error.user.notfound=사용자를 찾을 수 없습니다.
+error.post.not.found=게시글을 찾을 수 없습니다.
+error.post.access.denied=본인이 작성한 글만 수정/삭제할 수 있습니다.
+error.invalid.credentials=이메일 또는 비밀번호가 올바르지 않습니다.
+error.login.invalid=이메일 또는 비밀번호가 올바르지 않습니다.
+error.duplicate.email=이미 사용 중인 이메일입니다.
+error.email.duplicate=이미 사용 중인 이메일입니다.
+error.password.mismatch=비밀번호가 일치하지 않습니다.
+error.current.password.invalid=현재 비밀번호가 일치하지 않습니다.
 
 # Exception Page Messages
 error.page.title.404=페이지를 찾을 수 없습니다
@@ -19,6 +32,9 @@ error.page.message.500=서비스 이용에 불편을 드려 죄송합니다. 잠
 error.actions.home=메인으로
 error.actions.posts=게시글 목록
 error.actions.back=이전 페이지
+
+# System Messages
+system.user.anonymous.created=익명사용자 계정이 생성되었습니다
 
 # Signup Messages
 flash.user.created=회원가입이 완료되었습니다.
@@ -33,13 +49,3 @@ error.login.invalid=이메일 또는 비밀번호가 올바르지 않습니다.
 flash.profile.updated=프로필이 수정되었습니다.
 error.user.notfound=사용자를 찾을 수 없습니다.
 error.post.access.denied=본인이 작성한 글만 수정/삭제할 수 있습니다.
-
-# Validation Messages
-validation.email.required=이메일은 필수입니다.
-validation.email.invalid=올바른 이메일 형식이 아닙니다.
-validation.password.required=비밀번호는 필수입니다.
-validation.password.size=비밀번호는 최소 4자 이상이어야 합니다.
-validation.password.confirm.required=비밀번호 확인은 필수입니다.
-validation.nickname.required=닉네임은 필수입니다.
-validation.nickname.size=닉네임은 2자 이상 20자 이하여야 합니다.
-validation.password.current.required=현재 비밀번호는 필수입니다.
