--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -1,6 +1,8 @@
 # Flash Messages (English)
-
-# Success Messages
+flash.user.created=Sign up completed successfully.
+flash.login.success=You have been logged in successfully.
+flash.logout.success=You have been logged out successfully.
+flash.profile.updated=Profile updated successfully.
 flash.post.created=Post has been created successfully.
 flash.post.updated=Post has been updated successfully.
 flash.post.deleted=Post has been deleted successfully.
@@ -10,6 +12,17 @@ error.post.notfound=The requested post could not be found.
 error.server.internal=A server error occurred. Please try again later.
 error.page.notfound=Page not found.
 error.access.denied=Access denied.
+error.post.not.owner=You can only edit/delete your own posts.
+error.user.not.found=User not found.
+error.user.notfound=User not found.
+error.post.not.found=Post not found.
+error.post.access.denied=You can only edit/delete your own posts.
+error.invalid.credentials=Invalid email or password.
+error.login.invalid=Invalid email or password.
+error.duplicate.email=Email is already in use.
+error.email.duplicate=Email is already in use.
+error.password.mismatch=Passwords do not match.
+error.current.password.invalid=Current password is incorrect.
 
 # Exception Page Messages
 error.page.title.404=Page Not Found
@@ -19,6 +32,9 @@ error.page.message.500=We apologize for the inconvenience. Please try again late
 error.actions.home=Home
 error.actions.posts=Posts
 error.actions.back=Back
+
+# System Messages
+system.user.anonymous.created=Anonymous user account has been created
 
 # Signup Messages
 flash.user.created=Sign up completed successfully.
@@ -33,13 +49,3 @@ error.login.invalid=Invalid email or password.
 flash.profile.updated=Profile updated successfully.
 error.user.notfound=User not found.
 error.post.access.denied=You can only edit/delete your own posts.
-
-# Validation Messages
-validation.email.required=Email is required.
-validation.email.invalid=Invalid email format.
-validation.password.required=Password is required.
-validation.password.size=Password must be at least 4 characters.
-validation.password.confirm.required=Password confirmation is required.
-validation.nickname.required=Nickname is required.
-validation.nickname.size=Nickname must be between 2 and 20 characters.
-validation.password.current.required=Current password is required.
