다국어 완료

--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -1,4 +1,4 @@
-# Flash Messages (Korean)
+# Flash Messages
 flash.user.created=회원가입이 완료되었습니다.
 flash.login.success=로그인되었습니다.
 flash.logout.success=로그아웃되었습니다.
@@ -14,12 +14,9 @@ error.page.notfound=페이지를 찾을 수 없습니다.
 error.access.denied=접근 권한이 없습니다.
 error.post.not.owner=본인이 작성한 글만 수정/삭제할 수 있습니다.
 error.user.not.found=사용자를 찾을 수 없습니다.
-error.user.notfound=사용자를 찾을 수 없습니다.
 error.post.not.found=게시글을 찾을 수 없습니다.
 error.post.access.denied=본인이 작성한 글만 수정/삭제할 수 있습니다.
-error.invalid.credentials=이메일 또는 비밀번호가 올바르지 않습니다.
 error.login.invalid=이메일 또는 비밀번호가 올바르지 않습니다.
-error.duplicate.email=이미 사용 중인 이메일입니다.
 error.email.duplicate=이미 사용 중인 이메일입니다.
 error.password.mismatch=비밀번호가 일치하지 않습니다.
 error.current.password.invalid=현재 비밀번호가 일치하지 않습니다.
@@ -36,59 +33,3 @@ error.actions.back=이전 페이지
 # System Messages
 system.user.anonymous.created=익명사용자 계정이 생성되었습니다
 
-# Signup Messages
-flash.user.created=회원가입이 완료되었습니다.
-error.email.duplicate=이미 사용 중인 이메일입니다.
-
-# Login Messages
-flash.login.success=로그인되었습니다.
-flash.logout.success=로그아웃되었습니다.
-error.login.invalid=이메일 또는 비밀번호가 올바르지 않습니다.
-
-# Profile Messages
-flash.profile.updated=프로필이 수정되었습니다.
-error.user.notfound=사용자를 찾을 수 없습니다.
-error.post.access.denied=본인이 작성한 글만 수정/삭제할 수 있습니다.
-
-# Main Page Messages
-main.title=goorm board
-main.welcome=게시판에 오신 것을 환영합니다
-main.description=자유롭게 글을 작성하고 소통해보세요
-
-# Header Navigation Messages
-nav.home=메인
-nav.posts=게시판
-nav.signup=회원가입
-nav.login=로그인
-nav.profile=프로필
-nav.logout=로그아웃
-nav.language.ko=한국어
-nav.language.en=English
-nav.user.greeting=님
-
-# Board Messages
-board.title=게시판
-board.create=글쓰기
-board.list=글 목록
-board.detail=글 상세
-board.edit=글 수정
-board.delete=글 삭제
-board.author=작성자
-board.title.label=제목
-board.content.label=내용
-board.created=작성일
-board.updated=수정일
-board.viewcount=조회수
-board.actions=작업
-board.no.posts=등록된 게시글이 없습니다
-board.back.to.list=목록으로
-board.confirm.delete=정말로 삭제하시겠습니까?
-
-# Button Messages
-button.submit=제출
-button.cancel=취소
-button.save=저장
-button.edit=수정
-button.delete=삭제
-button.back=뒤로
-button.confirm=확인
