--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -1,4 +1,4 @@
-# Flash Messages (English)
+# Flash Messages
 flash.user.created=Sign up completed successfully.
 flash.login.success=You have been logged in successfully.
 flash.logout.success=You have been logged out successfully.
@@ -14,12 +14,9 @@ error.page.notfound=Page not found.
 error.access.denied=Access denied.
 error.post.not.owner=You can only edit/delete your own posts.
 error.user.not.found=User not found.
-error.user.notfound=User not found.
 error.post.not.found=Post not found.
 error.post.access.denied=You can only edit/delete your own posts.
-error.invalid.credentials=Invalid email or password.
 error.login.invalid=Invalid email or password.
-error.duplicate.email=Email is already in use.
 error.email.duplicate=Email is already in use.
 error.password.mismatch=Passwords do not match.
 error.current.password.invalid=Current password is incorrect.
@@ -36,59 +33,3 @@ error.actions.back=Back
 # System Messages
 system.user.anonymous.created=Anonymous user account has been created
 
-# Signup Messages
-flash.user.created=Sign up completed successfully.
-error.email.duplicate=Email is already in use.
-
-# Login Messages
-flash.login.success=You have been logged in successfully.
-flash.logout.success=You have been logged out successfully.
-error.login.invalid=Invalid email or password.
-
-# Profile Messages
-flash.profile.updated=Profile updated successfully.
-error.user.notfound=User not found.
-error.post.access.denied=You can only edit/delete your own posts.
-
-# Main Page Messages
-main.title=goorm board
-main.welcome=Welcome to the Board
-main.description=Write and communicate freely
-
-# Header Navigation Messages
-nav.home=Home
-nav.posts=Posts
-nav.signup=Sign Up
-nav.login=Login
-nav.profile=Profile
-nav.logout=Logout
-nav.language.ko=한국어
-nav.language.en=English
-nav.user.greeting=
-
-# Board Messages
-board.title=Board
-board.create=Write Post
-board.list=Post List
-board.detail=Post Detail
-board.edit=Edit Post
-board.delete=Delete Post
-board.author=Author
-board.title.label=Title
-board.content.label=Content
-board.created=Created
-board.updated=Updated
-board.viewcount=Views
-board.actions=Actions
-board.no.posts=No posts available
-board.back.to.list=Back to List
-board.confirm.delete=Are you sure you want to delete this post?
-
-# Button Messages
-button.submit=Submit
-button.cancel=Cancel
-button.save=Save
-button.edit=Edit
-button.delete=Delete
-button.back=Back
-button.confirm=Confirm
