--- a/src/main/resources/messages/stock/stock_en.properties
+++ b/src/main/resources/messages/stock/stock_en.properties
@@ -1,14 +1,18 @@
 # Stock Management System Messages
 
 # Main Page
-main.title=Stock Management System
-main.welcome=Welcome to the Stock Management System
-main.description=Grow your business with efficient inventory management
+main.title=goorm board
+main.welcome=Welcome to Goorm Board!
+main.description=A bulletin board made with Spring Boot + Thymeleaf
+main.greeting.hello=Hello
+main.login.message=Log in to use more features!
+main.goto.posts=Go to Board
 main.get.started=Get Started
 main.learn.more=Learn More
 
 # Header Navigation
 nav.home=Home
+nav.posts=Posts
 nav.signup=Sign Up
 nav.login=Login
 nav.profile=Profile
@@ -16,6 +20,35 @@ nav.logout=Logout
 nav.language.ko=한국어
 nav.language.en=English
 nav.user.greeting=
+
+# Board Messages
+board.title=Board
+board.create=Write Post
+board.list=Post List
+board.detail=Post Detail
+board.edit=Edit Post
+board.delete=Delete Post
+board.author=Author
+board.title.label=Title
+board.content.label=Content
+board.created=Created
+board.updated=Updated
+board.viewcount=Views
+board.actions=Actions
+board.number=No.
+board.no.posts=No posts available
+board.back.to.list=Back to List
+board.confirm.delete=Are you sure you want to delete this post?
+
+# Button Messages
+button.submit=Submit
+button.cancel=Cancel
+button.save=Save
+button.edit=Edit
+button.delete=Delete
+button.back=Back
+button.confirm=Confirm
+
 
 # Authentication
 auth.signup.title=Sign Up
@@ -33,6 +66,10 @@ auth.logout.button=Logout
 auth.update.profile=Update Profile
 auth.already.member=Already a member?
 auth.not.member=Not a member yet?
+auth.current.info=Current Information
+auth.joined.date=Joined Date
+auth.new.password.optional=New Password (Optional)
+auth.new.password.confirm=Confirm New Password
 
 # Flash Messages
 flash.signup.success=Sign up completed successfully
@@ -151,14 +188,6 @@ discount.min-order-amount=Min Order Amount
 discount.usage-limit=Usage Limit
 discount.used-count=Used Count
 
-# Forms
-form.required=This field is required
-form.invalid-format=Invalid format
-form.min-length=Minimum {0} characters required
-form.max-length=Maximum {0} characters allowed
-form.positive-number=Only positive numbers allowed
-form.invalid-email=Invalid email format
-form.invalid-phone=Invalid phone number format
 
 # Messages
 message.save-success=Successfully saved
