--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -33,3 +33,136 @@ error.actions.back=이전 페이지
 # System Messages
 system.user.anonymous.created=익명사용자 계정이 생성되었습니다
 
+# Navigation Messages
+nav.posts=게시판
+nav.products=상품관리
+nav.signup=회원가입
+nav.login=로그인
+nav.logout=로그아웃
+nav.profile=프로필
+nav.user.greeting=님
+nav.language.ko=한국어
+nav.language.en=English
+main.title=goorm board
+
+# Product Messages
+product.list.title=상품 관리
+product.list.description=상품을 등록하고 관리할 수 있습니다.
+product.create.title=상품 등록
+product.create.description=새로운 상품을 등록합니다.
+product.edit.title=상품 수정
+product.edit.description=상품 정보를 수정합니다.
+product.detail.title=상품 상세보기
+product.detail.description=상품의 상세 정보를 확인합니다.
+
+# Product Form Labels
+product.form.basic.info=기본 정보
+product.form.price.info=가격 정보
+product.form.additional.info=추가 정보
+product.form.image.upload=상품 이미지
+product.form.name=상품명
+product.form.code=상품 코드
+product.form.sku=SKU
+product.form.category=카테고리
+product.form.supplier=공급업체
+product.form.description=상품 설명
+product.form.unit.price=판매가
+product.form.unit.cost=원가
+product.form.unit=판매 단위
+product.form.status=상태
+product.form.barcode=바코드
+product.form.weight=무게 (kg)
+product.form.dimensions=크기 (가로 x 세로 x 높이)
+product.form.image.select=이미지 선택
+product.form.image.select.new=새 이미지 선택
+product.form.image.current=현재 이미지
+product.form.image.delete=이미지 삭제
+product.form.image.help=JPG, PNG, GIF 파일을 지원합니다. (최대 10MB)
+
+# Product Actions
+product.action.create=+ 상품 등록
+product.action.edit=수정
+product.action.delete=삭제
+product.action.cancel=취소
+product.action.list=목록
+product.action.detail=상세
+product.action.excel.download=엑셀 다운로드
+product.search.button=검색
+
+# Product Status
+product.status.active=판매중
+product.status.inactive=비활성
+product.status.discontinued=단종
+product.status.sellable=판매 가능
+product.status.not.sellable=판매 불가
+product.status.active.state=활성 상태
+product.status.inactive.state=비활성 상태
+
+# Product Labels
+product.label.total.count=총 {0}개의 상품
+product.label.no.products=등록된 상품이 없습니다.
+product.label.no.image=이미지 없음
+product.label.margin.amount=마진액
+product.label.margin.rate=마진율
+product.label.created.at=등록일
+product.label.updated.at=수정일
+product.label.inventory.history=재고 이력
+product.label.no.inventory=재고 이력이 없습니다.
+product.label.phase2.note=Phase 2에서 구현 예정입니다.
+
+# Product Categories
+product.category.all=전체
+product.category.electronics=전자제품
+product.category.clothing=의류
+product.category.books=도서
+product.category.unclassified=미분류
+
+# Product Suppliers
+product.supplier.all=전체
+product.supplier.a=공급업체 A
+product.supplier.b=공급업체 B
+product.supplier.unspecified=미지정
+
+# Product Search
+product.search.keyword=검색어
+product.search.keyword.placeholder=상품명, 코드 검색
+product.search.category=카테고리
+product.search.status=상태
+product.search.all=전체
+
+# Product Messages
+product.message.create.success=상품이 성공적으로 등록되었습니다.
+product.message.update.success=상품이 성공적으로 수정되었습니다.
+product.message.delete.success=상품이 성공적으로 삭제되었습니다.
+product.confirm.delete=정말 삭제하시겠습니까?
+product.message.code.duplicate=이미 사용중인 코드입니다.
+product.message.price.invalid=판매가는 원가보다 크거나 같아야 합니다.
+product.message.price.warning=판매가가 원가보다 낮습니다. 가격을 확인해주세요.
+product.message.upload.error=이미지 업로드에 실패했습니다: {0}
+
+# Product Table Headers
+product.table.product.info=상품정보
+product.table.category=카테고리
+product.table.price.info=가격정보
+product.table.status=상태
+product.table.created.date=등록일
+product.table.management=관리
+product.table.no.products=등록된 상품이 없습니다.
+
+# Product Pagination
+product.pagination.previous=이전
+product.pagination.next=다음
+
+# Placeholders
+product.placeholder.name=상품명을 입력하세요
+product.placeholder.code=PRD-001
+product.placeholder.sku=재고 관리 코드
+product.placeholder.description=상품에 대한 상세한 설명을 입력하세요
+product.placeholder.price=0.00
+product.placeholder.barcode=8801234567890
+product.placeholder.weight=0.000
+product.placeholder.dimensions=예: 10cm x 5cm x 2cm
+
+# Required field indicator
+required=*
+
