--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -33,3 +33,136 @@ error.actions.back=Back
 # System Messages
 system.user.anonymous.created=Anonymous user account has been created
 
+# Navigation Messages
+nav.posts=Posts
+nav.products=Products
+nav.signup=Sign Up
+nav.login=Login
+nav.logout=Logout
+nav.profile=Profile
+nav.user.greeting=
+nav.language.ko=한국어
+nav.language.en=English
+main.title=goorm board
+
+# Product Messages
+product.list.title=Product Management
+product.list.description=You can register and manage products.
+product.create.title=Add Product
+product.create.description=Register a new product.
+product.edit.title=Edit Product
+product.edit.description=Edit product information.
+product.detail.title=Product Details
+product.detail.description=View detailed product information.
+
+# Product Form Labels
+product.form.basic.info=Basic Information
+product.form.price.info=Price Information
+product.form.additional.info=Additional Information
+product.form.image.upload=Product Image
+product.form.name=Product Name
+product.form.code=Product Code
+product.form.sku=SKU
+product.form.category=Category
+product.form.supplier=Supplier
+product.form.description=Product Description
+product.form.unit.price=Unit Price
+product.form.unit.cost=Unit Cost
+product.form.unit=Unit
+product.form.status=Status
+product.form.barcode=Barcode
+product.form.weight=Weight (kg)
+product.form.dimensions=Dimensions (W x H x D)
+product.form.image.select=Select Image
+product.form.image.select.new=Select New Image
+product.form.image.current=Current Image
+product.form.image.delete=Delete Image
+product.form.image.help=Supports JPG, PNG, GIF files. (Max 10MB)
+
+# Product Actions
+product.action.create=+ Add Product
+product.action.edit=Edit
+product.action.delete=Delete
+product.action.cancel=Cancel
+product.action.list=List
+product.action.detail=Details
+product.action.excel.download=Excel Download
+product.search.button=Search
+
+# Product Status
+product.status.active=Active
+product.status.inactive=Inactive
+product.status.discontinued=Discontinued
+product.status.sellable=Sellable
+product.status.not.sellable=Not Sellable
+product.status.active.state=Active State
+product.status.inactive.state=Inactive State
+
+# Product Labels
+product.label.total.count=Total {0} products
+product.label.no.products=No products registered.
+product.label.no.image=No Image
+product.label.margin.amount=Margin Amount
+product.label.margin.rate=Margin Rate
+product.label.created.at=Created At
+product.label.updated.at=Updated At
+product.label.inventory.history=Inventory History
+product.label.no.inventory=No inventory history.
+product.label.phase2.note=To be implemented in Phase 2.
+
+# Product Categories
+product.category.all=All
+product.category.electronics=Electronics
+product.category.clothing=Clothing
+product.category.books=Books
+product.category.unclassified=Unclassified
+
+# Product Suppliers
+product.supplier.all=All
+product.supplier.a=Supplier A
+product.supplier.b=Supplier B
+product.supplier.unspecified=Unspecified
+
+# Product Search
+product.search.keyword=Keyword
+product.search.keyword.placeholder=Search by name, code
+product.search.category=Category
+product.search.status=Status
+product.search.all=All
+
+# Product Messages
+product.message.create.success=Product has been created successfully.
+product.message.update.success=Product has been updated successfully.
+product.message.delete.success=Product has been deleted successfully.
+product.confirm.delete=Are you sure you want to delete?
+product.message.code.duplicate=This code is already in use.
+product.message.price.invalid=Unit price must be greater than or equal to unit cost.
+product.message.price.warning=Unit price is lower than unit cost. Please check the price.
+product.message.upload.error=Image upload failed: {0}
+
+# Product Table Headers
+product.table.product.info=Product Info
+product.table.category=Category
+product.table.price.info=Price Info
+product.table.status=Status
+product.table.created.date=Created Date
+product.table.management=Management
+product.table.no.products=No products registered.
+
+# Product Pagination
+product.pagination.previous=Previous
+product.pagination.next=Next
+
+# Placeholders
+product.placeholder.name=Enter product name
+product.placeholder.code=PRD-001
+product.placeholder.sku=Stock keeping unit code
+product.placeholder.description=Enter detailed product description
+product.placeholder.price=0.00
+product.placeholder.barcode=8801234567890
+product.placeholder.weight=0.000
+product.placeholder.dimensions=e.g.: 10cm x 5cm x 2cm
+
+# Required field indicator
+required=*
+
