--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -7,6 +7,14 @@ flash.post.created=게시글이 성공적으로 작성되었습니다.
 flash.post.updated=게시글이 성공적으로 수정되었습니다.
 flash.post.deleted=게시글이 성공적으로 삭제되었습니다.
 
+# Excel Messages
+excel.export.success=Excel 파일이 성공적으로 생성되었습니다.
+excel.export.failed=Excel 파일 생성에 실패했습니다.
+excel.creation.failed=Excel 파일 생성 중 오류가 발생했습니다.
+excel.filename.generation.failed=파일명 생성 중 오류가 발생했습니다.
+excel.data.processing.failed=데이터 처리 중 오류가 발생했습니다.
+excel.no.data=내보낼 데이터가 없습니다.
+
 # Error Messages
 error.post.notfound=요청하신 게시글을 찾을 수 없습니다.
 error.server.internal=서버 오류가 발생했습니다. 잠시 후 다시 시도해주세요.
