카테고리 관리 완료

--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -44,6 +44,7 @@ system.user.anonymous.created=익명사용자 계정이 생성되었습니다
 # Navigation Messages
 nav.posts=게시판
 nav.products=상품관리
+nav.categories=카테고리관리
 nav.signup=회원가입
 nav.login=로그인
 nav.logout=로그아웃
@@ -173,4 +174,77 @@ product.placeholder.dimensions=예: 10cm x 5cm x 2cm
 
 # Required field indicator
 required=*
+
+# Category Messages
+category.list.title=카테고리 관리
+category.list.description=카테고리를 등록하고 관리할 수 있습니다.
+category.create.title=카테고리 등록
+category.create.description=새로운 카테고리를 등록합니다.
+category.edit.title=카테고리 수정
+category.edit.description=카테고리 정보를 수정합니다.
+category.detail.title=카테고리 상세보기
+category.detail.description=카테고리의 상세 정보를 확인합니다.
+
+# Category Form Labels
+category.form.basic.info=기본 정보
+category.form.name=카테고리명
+category.form.code=카테고리 코드
+category.form.description=카테고리 설명
+category.form.status=상태
+category.form.sort.order=정렬순서
+
+# Category Actions
+category.action.create=+ 카테고리 등록
+category.action.edit=수정
+category.action.activate=활성화
+category.action.deactivate=비활성화
+category.action.cancel=취소
+category.action.list=목록
+category.action.detail=상세
+category.action.excel.download=엑셀 다운로드
+category.search.button=검색
+
+# Category Status
+category.status.active=활성
+category.status.inactive=비활성
+category.status.active.state=활성 상태
+category.status.inactive.state=비활성 상태
+
+# Category Labels
+category.label.total.count=총 {0}개의 카테고리
+category.label.no.categories=등록된 카테고리가 없습니다.
+category.label.created.at=등록일
+category.label.updated.at=수정일
+
+# Category Search
+category.search.keyword=검색어
+category.search.keyword.placeholder=카테고리명, 코드 검색
+category.search.status=상태
+category.search.all=전체
+
+# Category Messages
+category.message.create.success=카테고리가 성공적으로 등록되었습니다.
+category.message.update.success=카테고리가 성공적으로 수정되었습니다.
+category.message.activate.success=카테고리가 성공적으로 활성화되었습니다.
+category.message.deactivate.success=카테고리가 성공적으로 비활성화되었습니다.
+category.confirm.activate=정말 활성화하시겠습니까?
+category.confirm.deactivate=정말 비활성화하시겠습니까?
+category.message.code.duplicate=이미 사용중인 코드입니다.
+
+# Category Table Headers
+category.table.category.info=카테고리정보
+category.table.status=상태
+category.table.sort.order=정렬순서
+category.table.created.date=등록일
+category.table.management=관리
+category.table.no.categories=등록된 카테고리가 없습니다.
+
+# Category Pagination
+category.pagination.previous=이전
+category.pagination.next=다음
+
+# Category Placeholders
+category.placeholder.name=카테고리명을 입력하세요
+category.placeholder.code=CAT-001
+category.placeholder.description=카테고리에 대한 상세한 설명을 입력하세요
 
