--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -44,6 +44,7 @@ system.user.anonymous.created=Anonymous user account has been created
 # Navigation Messages
 nav.posts=Posts
 nav.products=Products
+nav.categories=Categories
 nav.signup=Sign Up
 nav.login=Login
 nav.logout=Logout
@@ -173,4 +174,77 @@ product.placeholder.dimensions=e.g.: 10cm x 5cm x 2cm
 
 # Required field indicator
 required=*
+
+# Category Messages
+category.list.title=Category Management
+category.list.description=You can register and manage categories.
+category.create.title=Add Category
+category.create.description=Register a new category.
+category.edit.title=Edit Category
+category.edit.description=Edit category information.
+category.detail.title=Category Details
+category.detail.description=View detailed category information.
+
+# Category Form Labels
+category.form.basic.info=Basic Information
+category.form.name=Category Name
+category.form.code=Category Code
+category.form.description=Category Description
+category.form.status=Status
+category.form.sort.order=Sort Order
+
+# Category Actions
+category.action.create=+ Add Category
+category.action.edit=Edit
+category.action.activate=Activate
+category.action.deactivate=Deactivate
+category.action.cancel=Cancel
+category.action.list=List
+category.action.detail=Details
+category.action.excel.download=Excel Download
+category.search.button=Search
+
+# Category Status
+category.status.active=Active
+category.status.inactive=Inactive
+category.status.active.state=Active State
+category.status.inactive.state=Inactive State
+
+# Category Labels
+category.label.total.count=Total {0} categories
+category.label.no.categories=No categories registered.
+category.label.created.at=Created At
+category.label.updated.at=Updated At
+
+# Category Search
+category.search.keyword=Keyword
+category.search.keyword.placeholder=Search by name, code
+category.search.status=Status
+category.search.all=All
+
+# Category Messages
+category.message.create.success=Category has been created successfully.
+category.message.update.success=Category has been updated successfully.
+category.message.activate.success=Category has been activated successfully.
+category.message.deactivate.success=Category has been deactivated successfully.
+category.confirm.activate=Are you sure you want to activate?
+category.confirm.deactivate=Are you sure you want to deactivate?
+category.message.code.duplicate=This code is already in use.
+
+# Category Table Headers
+category.table.category.info=Category Info
+category.table.status=Status
+category.table.sort.order=Sort Order
+category.table.created.date=Created Date
+category.table.management=Management
+category.table.no.categories=No categories registered.
+
+# Category Pagination
+category.pagination.previous=Previous
+category.pagination.next=Next
+
+# Category Placeholders
+category.placeholder.name=Enter category name
+category.placeholder.code=CAT-001
+category.placeholder.description=Enter detailed category description
 
